--- a/in_app_review/android/build.gradle
+++ b/in_app_review/android/build.gradle
@@ -44,8 +44,6 @@ android {
         minSdkVersion 16
     }
     dependencies {
-        // Release notes: https://developer.android.com/reference/com/google/android/play/core/release-notes-in_app_reviews
-        implementation 'com.google.android.play:review:2.0.1'
-
+        implementation 'com.google.android.play:core:1.10.3'
     }
 }
